--- a/.github/workflows/nightlyCypressTests.yaml
+++ b/.github/workflows/nightlyCypressTests.yaml
@@ -125,7 +125,7 @@ jobs:
         if: failure()
         uses: actions/upload-artifact@v4
         with:
-          name: nightly-failed-screenshots-${{ matrix.browser }}-${{ matrix.environment.name }}-${{ github.run_id }}
+          name: screenshots-${{ matrix.browser }}-${{ matrix.environment.name }}-${{ strategy.job-index }}-${{ github.run_id }}
           path: pets-ui/cypress/screenshots
           retention-days: 7
           if-no-files-found: ignore
@@ -144,7 +144,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: nightly-mochawesome-report-${{ matrix.browser }}-${{ matrix.environment.name }}-${{ github.run_id }}
+          name: report-${{ matrix.browser }}-${{ matrix.environment.name }}-${{ strategy.job-index }}-${{ github.run_id }}
           path: pets-ui/cypress/reports/mochawesome/
           retention-days: 7
           if-no-files-found: ignore
@@ -163,7 +163,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: browser-result-${{ matrix.browser }}-${{ matrix.environment.name }}-${{ github.run_id }}
+          name: result-${{ matrix.browser }}-${{ matrix.environment.name }}-${{ strategy.job-index }}-${{ github.run_id }}
           path: ${{ matrix.browser }}-${{ matrix.environment.name }}-result.txt
           if-no-files-found: ignore
 
@@ -186,7 +186,6 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           path: all-artifacts
-          pattern: "*${{ github.run_id }}*"
 
       - name: Generate test summary report
         id: summary
@@ -223,8 +222,14 @@ jobs:
             ROW="| $browser"
             
             for env in "${ENVIRONMENTS[@]}"; do
-              RESULT_FILE="all-artifacts/browser-result-${browser}-${env}-${{ github.run_id }}/${browser}-${env}-result.txt"
-              SCREENSHOT_DIR="all-artifacts/nightly-failed-screenshots-${browser}-${env}-${{ github.run_id }}"
+              # Find result file with pattern matching since job-index varies
+              RESULT_FILE=$(find all-artifacts -name "result-${browser}-${env}-*-${{ github.run_id }}" -type d | head -1)
+              if [ -n "$RESULT_FILE" ]; then
+                RESULT_FILE="$RESULT_FILE/${browser}-${env}-result.txt"
+              fi
+              
+              # Find screenshot directory with pattern matching
+              SCREENSHOT_DIR=$(find all-artifacts -name "screenshots-${browser}-${env}-*-${{ github.run_id }}" -type d | head -1)
               
               if [ -f "$RESULT_FILE" ]; then
                 RESULT=$(cat "$RESULT_FILE")
