--- a/.github/workflows/nightlyCypressTests.yaml
+++ b/.github/workflows/nightlyCypressTests.yaml
@@ -85,9 +85,9 @@ jobs:
           echo "CYPRESS_BASE_URL: $CYPRESS_BASE_URL"
           # Test environment accessibility
           if curl -f -s -I "${{ matrix.environment.url }}" > /dev/null; then
-            echo "âœ… Environment ${{ matrix.environment.name }} is accessible"
+            echo "✅ Environment ${{ matrix.environment.name }} is accessible"
           else
-            echo "âŒ Environment ${{ matrix.environment.name }} is not accessible"
+            echo "❌ Environment ${{ matrix.environment.name }} is not accessible"
             echo "This may cause test failures"
           fi
 
@@ -194,7 +194,7 @@ jobs:
         id: summary
         shell: bash
         run: |
-          echo "# ðŸŒ™ Nightly Cypress Test Results" > nightly-summary.md
+          echo "# 🌙 Nightly Cypress Test Results" > nightly-summary.md
           echo "**Run Date**: $(date)" >> nightly-summary.md
           echo "**Run ID**: ${{ github.run_id }}" >> nightly-summary.md
           echo "" >> nightly-summary.md
@@ -288,9 +288,9 @@ jobs:
             done
             
             if [ $ENV_FAILED -eq 0 ]; then
-              echo "| ${env^^} | âœ… Passed | 0/3 |" >> nightly-summary.md
+              echo "| ${env^^} | ✅ Passed | 0/3 |" >> nightly-summary.md
             else
-              echo "| ${env^^} | âŒ Failed | $ENV_FAILED/3 |" >> nightly-summary.md
+              echo "| ${env^^} | ❌ Failed | $ENV_FAILED/3 |" >> nightly-summary.md
             fi
           done
           
@@ -298,13 +298,13 @@ jobs:
           
           # Overall status
           if [ $FAILED_COMBINATIONS -eq 0 ]; then
-            echo "## âœ… Overall Status: PASSED" >> nightly-summary.md
-            echo "All browserÃ—environment combinations completed successfully!" >> nightly-summary.md
+            echo "## ✅ Overall Status: PASSED" >> nightly-summary.md
+            echo "All browser×environment combinations completed successfully!" >> nightly-summary.md
             echo "status=PASS" >> $GITHUB_OUTPUT
             OVERALL_STATUS="PASS"
           else
-            echo "## âŒ Overall Status: FAILED" >> nightly-summary.md
-            echo "$FAILED_COMBINATIONS out of $TOTAL_COMBINATIONS browserÃ—environment combination(s) have failing tests." >> nightly-summary.md
+            echo "## ❌ Overall Status: FAILED" >> nightly-summary.md
+            echo "$FAILED_COMBINATIONS out of $TOTAL_COMBINATIONS browser×environment combination(s) have failing tests." >> nightly-summary.md
             echo "status=FAIL" >> $GITHUB_OUTPUT
             OVERALL_STATUS="FAIL"
           fi
@@ -390,7 +390,7 @@ jobs:
               
               document.body.innerHTML = `
                 <div style="font-family: Arial, sans-serif; padding: 20px; max-width: 1000px; margin: 0 auto;">
-                  <h1>ðŸŒ™ Pre-Entry TB Screening - Nightly Tests: ${data.overallStatus}</h1>
+                  <h1>🌙 Pre-Entry TB Screening - Nightly Tests: ${data.overallStatus}</h1>
                   <div style="background: #f5f5f5; padding: 15px; border-radius: 8px; margin: 15px 0;">
                     <h3>Cross-Environment Test Results</h3>
                     ${environmentTable}
@@ -407,7 +407,7 @@ jobs:
                     </div>
                   </div>
                   <p><strong>Last Updated:</strong> ${new Date(data.timestamp).toLocaleString()}</p>
-                  <p><a href="${data.runUrl}" target="_blank" style="background: #0066cc; color: white; padding: 8px 16px; text-decoration: none; border-radius: 4px;">ðŸ"Š View Detailed Results</a></p>
+                  <p><a href="${data.runUrl}" target="_blank" style="background: #0066cc; color: white; padding: 8px 16px; text-decoration: none; border-radius: 4px;">📊 View Detailed Results</a></p>
                 </div>
               `;
             });
@@ -439,10 +439,10 @@ jobs:
       - name: Set workflow conclusion
         if: always()
         run: |
-          echo "ðŸ"— Dashboard URL: ${{ steps.deployment.outputs.page_url }}"
+          echo "🔗 Dashboard URL: ${{ steps.deployment.outputs.page_url }}"
           if [[ "${{ steps.summary.outputs.status }}" == "PASS" ]]; then
-            echo "::notice::âœ… All nightly tests passed across all environments! Dashboard updated at ${{ steps.deployment.outputs.page_url }}"
+            echo "::notice::✅ All nightly tests passed across all environments! Dashboard updated at ${{ steps.deployment.outputs.page_url }}"
           else
-            echo "::error::âŒ Some nightly tests failed across environments. Check dashboard: ${{ steps.deployment.outputs.page_url }}"
+            echo "::error::❌ Some nightly tests failed across environments. Check dashboard: ${{ steps.deployment.outputs.page_url }}"
             exit 1
           fi
